# DLogger

./: CMakeLists.txt  README.md
include/DLogger/: Logger.h  LoggerLevels.h  Platform.h
src/: source.cpp
src/DLogger/: Logger.cpp
